[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/pirate ship_prop1.png" type="Texture" id=1]
[ext_resource path="res://assets/pirate ship_prop2.png" type="Texture" id=2]
[ext_resource path="res://assets/pirate ship.png" type="Texture" id=3]
[ext_resource path="res://scripts/PirateShip.gd" type="Script" id=4]
[ext_resource path="res://scenes/CannonBall.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 72.25, 35.75 )

[sub_resource type="CircleShape2D" id=8]
radius = 173.781

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 8, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 26.38
gravity = Vector3( 0, -150, 0 )
initial_velocity = 195.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.407843, 0.286275, 0.443137, 1 )

[sub_resource type="Animation" id=9]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -9.4, 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 19.8438 ), Vector2( 1.88775, 100.073 ), Vector2( 1.888, 800 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 37.4 ]
}

[node name="PirateShip" type="Node2D"]
script = ExtResource( 4 )
ball_scene = ExtResource( 5 )

[node name="Pivot" type="Position2D" parent="."]
position = Vector2( 250, 0 )
rotation = -0.164061

[node name="Deck" type="Sprite" parent="Pivot"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 10.6732, -2.21864, 136.642, 40.1186 )

[node name="Cabin" type="Sprite" parent="Pivot"]
position = Vector2( -1.49759, -18.3155 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 36.7545, 223.786, 53.3326, 31.4855 )

[node name="Cannon" type="Sprite" parent="Pivot"]
position = Vector2( -59.5738, -15.7331 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 6.83332, 232.969, 21.3083, 18.79 )

[node name="MuzzlePos" type="Position2D" parent="Pivot"]
position = Vector2( -68.75, -18.5 )

[node name="BottomProp" type="AnimatedSprite" parent="Pivot"]
position = Vector2( -1.75, 29.25 )
frames = SubResource( 3 )

[node name="Fin" type="Sprite" parent="Pivot"]
position = Vector2( 2.25, 14 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 7.5774, 131.772, 23.6328, 24.4076 )

[node name="BackProp" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 65.75, -4.75 )
frames = SubResource( 6 )

[node name="HitCollider" type="Area2D" parent="Pivot"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitCollider"]
position = Vector2( 0.25, -3.25 )
shape = SubResource( 7 )

[node name="ShotDetector" type="Area2D" parent="Pivot"]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/ShotDetector"]
shape = SubResource( 8 )

[node name="Particles2D" type="Particles2D" parent="Pivot"]
emitting = false
amount = 64
lifetime = 0.2
one_shot = true
speed_scale = 0.67
explosiveness = 0.18
randomness = 0.1
process_material = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/appear = SubResource( 9 )
anims/die = SubResource( 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -8.0

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Pivot/HitCollider" to="." method="_on_HitCollider_body_entered"]
[connection signal="body_entered" from="Pivot/ShotDetector" to="." method="_on_ShotDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
